struttura dati pokedex

--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <div id="app">
+        <div v-for="(element, index) in listapokemon" :key="index">
+        {{element}}
+
+        </div>
+    </div>
         <!-- <div>
             <span>
                 ID : {{numero - 1}}
@@ -18,7 +23,7 @@
                 NAME : {{listapokemon[numero -2].name}}
             </span>
         </div> -->
-        <div v-if="visibilitaSopra">
+        <!-- <div v-if="visibilitaSopra">
             <span>
                 ID : {{numerosopra}}
             </span>
@@ -52,7 +57,9 @@
         </div>
        
        <button @click="numeropiu">avanti</button>
-    </div>
+    </div> -->
+
+
     <script src="./assets/js/main.js"></script>
 </body>
 </html>
