completo! (ma lento)

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                     B
                 </div>
                 <div class="up-n-down">
-                    <div>
+                    <div @click="diminuisci">
                         <i class="fa-solid fa-caret-up"></i>
                     </div>
                     <div @click="aumenta">
